--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "next": "13.0.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "18.11.8",
     "@types/react": "18.0.24",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "18.0.8",
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
