--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.2",
     "date-fns": "^2.29.3",
+    "geolib": "^3.3.3",
     "next": "13.0.0",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.19",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
